--- a/WebContent/love.html
+++ b/WebContent/love.html
@@ -69,7 +69,7 @@
 	</body>
 	<script type="text/javascript" src="js/jquery-3.5.1.min.js" ></script>
 	<script type="text/javascript" src="js/musicPlay.js" ></script>
-	<script type="text/javascript" src="js/check1.js" ></script>        <!-- 检查登录 -->
+	<script type="text/javascript" src="js/chack1.js" ></script>        <!-- 检查登录 -->
 	<script>
 		
 		function show2(id){
