一个简单的音乐播放器

--- a/WebContent/love.html
+++ b/WebContent/love.html
@@ -92,8 +92,8 @@
 	   		  $.each(data,function(index,item){
 	   			  str += '<tr class="backgrounds"  onmousemove="show2('+ index +')" onmouseout="show3('+ index +')">'+
 	   			         '<td align="center"><span class="glyphicon glyphicon-heart"></span></td>'+
-	   			         '<td><img src="'+ item.mphoto +'"></td>'+
-	   			         '<td><span>'+ item.musicname +'</span>'+
+	   			         '<td class="ph"><img src="'+ item.mphoto +'"></td>'+
+	   			         '<td><span class="mn">'+ item.musicname +'</span>'+
 	   			         '<span class="play"><span class="glyphicon glyphicon-play" onclick="play3('+ index +')"></span></span>'+
 	   			         '<span class="save"><a><span class="glyphicon glyphicon-save" onclick="download('+ index +')"></span></a></span>'+
 	   			         '</td><td>'+ item.musicer +'</td></tr>'; 
