--- a/WebContent/finds.html
+++ b/WebContent/finds.html
@@ -87,7 +87,7 @@
     				if(data > 0){
     					alert("添加成功！");
     				}else{
-    					alert("添加失败！");
+    					alert("添加失败，歌曲已添加！");
     				}
     				
     			},'text');
