一个简单的音乐播放器

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -112,12 +112,17 @@
 					<li>
 						<span class="glyphicon glyphicon-chevron-right" id="next"></span> <!-- 下一首 -->
 					</li>
+					<li>
+						<span id="next" class="glyphicon glyphicon-comment" onclick="showpage(this,'message.html')"></span>
+					</li>
 				</ul>
 			</div>
 			
+			 
 			<div class="f_r">		
 				<audio id="audio"></audio>
 			</div>
+			 
 			
 			<!-- 播放切换 -->
 		  <div class="order">
