简单的音乐播放器

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -112,9 +112,12 @@
 					<li>
 						<span class="glyphicon glyphicon-chevron-right" id="next"></span> <!-- 下一首 -->
 					</li>
+ 
 					<li>
-						<span id="next" class="glyphicon glyphicon-comment" onclick="showpage(this,'message.html')"></span>
+						<span class="glyphicon glyphicon-comment" onclick="showpage(this,'message.html')"></span>
 					</li>
+
+					
 				</ul>
 			</div>
 			
@@ -151,6 +154,7 @@
 	<script type="text/javascript" src="js/texiao.js" ></script>
 	<script type="text/javascript" src="js/check.js" ></script>        <!-- 检查登录 -->
 	<script type="text/javascript" src="js/musicPlay.js" ></script>
+	<script type="text/javascript" src="js/chackMusic.js" ></script>
 	<script type="text/javascript" src="js/musicword.js" ></script>    <!-- 音乐歌词 -->
 
 </html>
